# codegraph

./: .env  .env.example  .gitignore  README.md  code_parser.py  db_manager.py  extractDocStrings.py  generateSummary.py  generate_visualization.py  mcp-code-graph.py  requirements.txt  runner.py  test-project-visualization.html  test_db.py  visualize_graph.py
db/: __init__.py  db_manager.py  logging_utils.py  vector_db_manager.py
mcp-code-graph/: pyproject.toml
mcp-code-graph/mcp-code-graph/: main.py  pyproject.toml
parsers/: __init__.py  code_parser.py
scripts/: __init__.py  runner.py  test_db.py
search/: __init__.py  searchExplainer.py  searchInDocString.py  text_preprocessor.py
segregate/: __init__.py  segregateDocString.py
summarize/: generateSummary.py
test-project/: api.py  database.py  main.py  models.py  utils.py
test-project/test-sub-folder/: database.py  utils.py
