[project]
name = "mcp-code-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "networkx>=3.4.2",
    "pinecone-client>=6.0.0",
    "pygraphviz>=1.14",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
    "pyvis>=0.3.2",
    "sentence-transformers>=4.0.2",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "mcp-code-graph",
]
